<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UIDemo</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
    <string name="label_user">用户名：</string>
    <string name="user_hint">请输入用户名</string>
    <string name="label_pwd">密 码：</string>
    <string name="pwd_hint">请输入密码</string>
    <string name="btn_login">登录</string>

</resources>
